k8s/apps/homepage/stonegarden/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stonegarden
  labels:
    dev.stonegarden.app: homepage
